@@ -79,10 +79,10 @@ object MakeLeftDrinksHandler {
         scope.launch {
             mutex.withLock {
                 _executingQueue.value += model
-                val productProfile =
+                val byteInfo =
                     ProductProfileManager.convertProductProfile(model.productId, true)
-                SerialPortDataManager.instance.sendCommand(MAKE_DRINKS_COMMAND_ID,
-                    productProfile)
+                SerialPortDataManager.instance.sendCommand(MAKE_DRINKS_COMMAND_ID, byteInfo.size,
+                    byteInfo)
                 waitForOperationReplyConfirm()
                 Logger.d(TAG, "executeNow() called ${_executingQueue.value}")
             }
@@ -123,9 +123,10 @@ object MakeLeftDrinksHandler {
             _executingQueue.value += _queue.value[HEAD_INDEX]
             Logger.d(TAG, "handleMessage() called ${_executingQueue.value}")
 
-            val productProfile =
+            val byteInfo =
                 ProductProfileManager.convertProductProfile(processingProductId, true)
-            SerialPortDataManager.instance.sendCommand(MAKE_DRINKS_COMMAND_ID, productProfile)
+            SerialPortDataManager.instance.sendCommand(MAKE_DRINKS_COMMAND_ID, byteInfo.size,
+                byteInfo)
             waitForProductReplyConfirm()
         }
     }
